feat: add deployment list and single endpoints
