# openapi/schema.yml
@@ -473,6 +473,92 @@ paths:
           content:
             application/json:
               schema: *id001
+  /api/projects/{project_slug}/{env_slug}/service-details/{slug}/deployments/:
+    get:
+      summary: Deployment List
+      operationId: deployment_list_api_projects__project_slug___env_slug__service_details__slug__deployments__get
+      parameters:
+      - name: project_slug
+        in: path
+        required: true
+        schema:
+          type: string
+          title: Project Slug
+      - name: env_slug
+        in: path
+        required: true
+        schema:
+          type: string
+          title: Env Slug
+      - name: slug
+        in: path
+        required: true
+        schema:
+          type: string
+          title: Slug
+      responses:
+        '200':
+          description: Successful Response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DeploymentListResponse'
+        '422':
+          description: Validation Error
+          content:
+            application/json:
+              schema: *id001
+        default:
+          description: Error
+          content:
+            application/json:
+              schema: *id001
+  /api/projects/{project_slug}/{env_slug}/service-details/{slug}/deployments/{deployment_hash}/:
+    get:
+      summary: Deployment Single
+      operationId: deployment_single_api_projects__project_slug___env_slug__service_details__slug__deployments__deployment_hash___get
+      parameters:
+      - name: project_slug
+        in: path
+        required: true
+        schema:
+          type: string
+          title: Project Slug
+      - name: env_slug
+        in: path
+        required: true
+        schema:
+          type: string
+          title: Env Slug
+      - name: slug
+        in: path
+        required: true
+        schema:
+          type: string
+          title: Slug
+      - name: deployment_hash
+        in: path
+        required: true
+        schema:
+          type: string
+          title: Deployment Hash
+      responses:
+        '200':
+          description: Successful Response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DeploymentSchema'
+        '422':
+          description: Validation Error
+          content:
+            application/json:
+              schema: *id001
+        default:
+          description: Error
+          content:
+            application/json:
+              schema: *id001
   /api/projects/{project_slug}/{env_slug}/service-details/{slug}/:
     get:
       summary: Get Service
@@ -805,6 +891,21 @@ components:
       - language
       - version
       title: ConfigSchema
+    DeploymentListResponse:
+      properties:
+        results:
+          items:
+            $ref: '#/components/schemas/DeploymentSchema'
+          type: array
+          title: Results
+        count:
+          type: integer
+          title: Count
+      type: object
+      required:
+      - results
+      - count
+      title: DeploymentListResponse
     DeploymentSchema:
       properties:
         id:
